Mobile and JS 1

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 								<label for="como">2. Cómo mostraremos tús números de Whatsapp</label>
 								<div class="forma">
 									<div class='aleatoria'>
-										<input type="radio" id='aleatoria' name='forma'>
+										<input type="radio" id='aleatoria' name='forma' class='aleatoria' checked>
 										<label for="aleatoria">En forma Aleatoria</label>
 									</div>
 									<div class='trafico'>
-										<input type="radio" id='trafico' name='forma'>
+										<input type="radio" id='trafico' name='forma' class='trafic'>
 										<label for="trafico">Según fuentes de Tráfico</label>
 									</div>
 								</div>
@@ -180,11 +180,11 @@
 								<p>3. Define los días y horarios en que se activará  el Widget de Whatsapp</p>
 								<div class="days">
 									<div>
-										<input type="radio" id='todos' name='days'>
+										<input type="radio" id='todos' name='days' class='todos' checked>
 										<label for="todos">Todos los días y horarios</label>
 									</div>
 									<div>
-										<input type="radio" id='definir' name='days'>
+										<input type="radio" id='definir' name='days' class='definir'>
 										<label for="definir">Definir días y horarios</label>
 									</div>
 								</div>
@@ -271,11 +271,11 @@
 								<label for="como">2. Cómo mostraremos tús números de Teléfono</label>
 								<div class="forma">
 									<div class='aleatoria'>
-										<input type="radio" id='aleatoria_tel' name='forma'>
+										<input type="radio" id='aleatoria_tel' name='forma' class='aleatoria' checked>
 										<label for="aleatoria_tel">En forma Aleatoria</label>
 									</div>
 									<div class='trafico'>
-										<input type="radio" id='trafico_tel' name='forma'>
+										<input type="radio" id='trafico_tel' name='forma' class='trafic'>
 										<label for="trafico_tel">Según fuentes de Tráfico</label>
 									</div>
 								</div>
@@ -330,11 +330,11 @@
 								<p>3. Define los días y horarios en que se activará  el Widget de Telefono</p>
 								<div class="days">
 									<div>
-										<input type="radio" id='todos_tel' name='days'>
+										<input type="radio" id='todos_tel' name='days' class='todos' checked>
 										<label for="todos_tel">Todos los días y horarios</label>
 									</div>
 									<div>
-										<input type="radio" id='definir_tel' name='days'>
+										<input type="radio" id='definir_tel' name='days' class='definir'>
 										<label for="definir_tel">Definir días y horarios</label>
 									</div>
 								</div>
@@ -420,11 +420,11 @@
 								<p>3. Define los días y horarios en que se activará  el Widget de Email</p>
 								<div class="days">
 									<div>
-										<input type="radio" id='todos_mail' name='days'>
+										<input type="radio" id='todos_mail' name='days' class='todos' checked>
 										<label for="todos_mail">Todos los días y horarios</label>
 									</div>
 									<div>
-										<input type="radio" id='definir_mail' name='days'>
+										<input type="radio" id='definir_mail' name='days' class='definir'>
 										<label for="definir_mail">Definir días y horarios</label>
 									</div>
 								</div>
@@ -510,11 +510,11 @@
 								<p>3. Define los días y horarios en que se activará  el Widget de Telefono</p>
 								<div class="days">
 									<div>
-										<input type="radio" id='todos_fb' name='days'>
+										<input type="radio" id='todos_fb' name='days' class='todos' checked>
 										<label for="todos_fb">Todos los días y horarios</label>
 									</div>
 									<div>
-										<input type="radio" id='definir_fb' name='days'>
+										<input type="radio" id='definir_fb' name='days' class='definir'>
 										<label for="definir_fb">Definir días y horarios</label>
 									</div>
 								</div>
@@ -600,11 +600,11 @@
 								<p>3. Define los días y horarios en que se activará  el Widget de Google Maps</p>
 								<div class="days">
 									<div>
-										<input type="radio" id='todos_gm' name='days' checked>
+										<input type="radio" id='todos_gm' name='days' class='todos' checked>
 										<label for="todos_gm">Todos los días y horarios</label>
 									</div>
 									<div>
-										<input type="radio" id='definir_gm' name='days'>
+										<input type="radio" id='definir_gm' name='days' class='definir'>
 										<label for="definir_gm">Definir días y horarios</label>
 									</div>
 								</div>
