--- a/index.html
+++ b/index.html
@@ -52,13 +52,8 @@
 								<label for="color">1. Elige el color de tu widget</label>
 								<input type="text" id='color' placeholder="#FF6550">
 							</div>
-							<div class="mensaje">
-								<label for="mensaje">2. Elige el mensaje de bienvenida</label>
-								<textarea id='mensaje' placeholder="Hola, ¿cómo podemos ayudarte? Envíanos tu mensaje"></textarea>
-								<p>Este mensaje aparecerá a los 5 segundos de el usuario ingrese a alguna de las páginas de tu sitio web.</p>
-							</div>
 							<div class="posicion">
-								<label for="posicion">3. Elige la posición de tu widget</label>
+								<label for="posicion">2. Elige la posición de tu widget</label>
 								<div class="position">
 									<label for="vertical">Vertical (px)</label>
 									<input type="text" placeholder="30" id='vertical'>
@@ -72,7 +67,7 @@
 					</div>
 					<div class="form_down">
 						<div class="acciones">
-							<p>5. Mide las acciones de tu Widget</p>
+							<p>3. Mide las acciones de tu Widget</p>
 							<div class="checkboxs">
 								<div class="google">
 									<input type="checkbox" id='google' name='acciones' checked>
@@ -115,9 +110,9 @@
 							<div class="numero">
 								<label for="numero">1. Agrega tus números de Whatsapp</label>
 								<input type="text" id='numero'>
-								<a href="">Añadir</a>
+								<!-- <a href="">Añadir</a> -->
 							</div>
-							<div class="como">
+							<!-- <div class="como">
 								<label for="como">2. Cómo mostraremos tús números de Whatsapp</label>
 								<div class="forma">
 									<div class='aleatoria'>
@@ -175,9 +170,9 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="dias">
-								<p>3. Define los días y horarios en que se activará  el Widget de Whatsapp</p>
+								<p>2. Define los días y horarios en que se activará  el Widget de Whatsapp</p>
 								<div class="days">
 									<div>
 										<input type="radio" id='todos' name='days' class='todos' checked>
@@ -211,15 +206,15 @@
 								</div>
 							</div>
 							<div class="cfg_general">
-								<p class='title'>4. Configuración General</p>
+								<p class='title'>3. Configuración General</p>
 								<div class="mensaje">
-									<label for="mensaje">4.1 Elige el mensaje de bienvenida</label>
+									<label for="mensaje">3.1 Elige el mensaje de bienvenida</label>
 									<textarea id='mensaje' placeholder="Hola, ¿cómo podemos ayudarte? Envíanos tu mensaje"></textarea>
 									<p>Este mensaje aparecerá a los 5 segundos de el usuario ingrese a alguna de las páginas de tu sitio web.</p>
 								</div>
 								<div class="form_down">
 									<div class="acciones">
-										<p>4.2 Mide las acciones de tu Widget</p>
+										<p>3.2 Mide las acciones de tu Widget</p>
 										<div class="checkboxs">
 											<div class="google">
 												<input type="checkbox" id='google_wsp' name='acciones' checked>
@@ -265,9 +260,9 @@
 							<div class="numero">
 								<label for="numero">1. Agrega tus números de Teléfono</label>
 								<input type="text" id='numero'>
-								<a href="">Añadir</a>
+								<!-- <a href="">Añadir</a> -->
 							</div>
-							<div class="como">
+							<!-- <div class="como">
 								<label for="como">2. Cómo mostraremos tús números de Teléfono</label>
 								<div class="forma">
 									<div class='aleatoria'>
@@ -325,9 +320,9 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="dias">
-								<p>3. Define los días y horarios en que se activará  el Widget de Telefono</p>
+								<p>2. Define los días y horarios en que se activará  el Widget de Telefono</p>
 								<div class="days">
 									<div>
 										<input type="radio" id='todos_tel' name='days' class='todos' checked>
@@ -361,15 +356,15 @@
 								</div>
 							</div>
 							<div class="cfg_general">
-								<p class='title'>4. Configuración General</p>
-								<div class="mensaje">
+								<p class='title'>3. Configuración General</p>
+								<!-- <div class="mensaje">
 									<label for="mensaje">4.1 Elige el mensaje de bienvenida</label>
 									<textarea id='mensaje' placeholder="Hola, ¿cómo podemos ayudarte? Envíanos tu mensaje"></textarea>
 									<p>Este mensaje aparecerá a los 5 segundos de el usuario ingrese a alguna de las páginas de tu sitio web.</p>
-								</div>
+								</div> -->
 								<div class="form_down">
 									<div class="acciones">
-										<p>4.2 Mide las acciones de tu Widget</p>
+										<p>3.1 Mide las acciones de tu Widget</p>
 										<div class="checkboxs">
 											<div class="google">
 												<input type="checkbox" id='google_tel' name='acciones' checked>
@@ -409,15 +404,15 @@
 				<form>
 					<div class="border">
 						<div class="tit">
-							<h2>Wiget Email</h2>
+							<h2>Email</h2>
 						</div>
 						<div class="formulario">
 							<div class="url">
 								<label>1. Agrega tu dirección de Email</label>
-								<input type="text" name="" id='url' placeholder="Ej. www.facebook.com/tuempresa">
+								<input type="text" name="" id='url' placeholder="Ej. tunombre@tuempresa.com">
 							</div>
 							<div class="dias">
-								<p>3. Define los días y horarios en que se activará  el Widget de Email</p>
+								<p>2. Define los días y horarios en que se activará  el Widget de Email</p>
 								<div class="days">
 									<div>
 										<input type="radio" id='todos_mail' name='days' class='todos' checked>
@@ -451,15 +446,15 @@
 								</div>
 							</div>
 							<div class="cfg_general">
-								<p class='title'>4. Configuración General</p>
-								<div class="mensaje">
+								<p class='title'>3. Configuración General</p>
+								<!-- <div class="mensaje">
 									<label for="mensaje">4.1 Elige el mensaje de bienvenida</label>
 									<textarea id='mensaje' placeholder="Hola, ¿cómo podemos ayudarte? Envíanos tu mensaje"></textarea>
 									<p>Este mensaje aparecerá a los 5 segundos de el usuario ingrese a alguna de las páginas de tu sitio web.</p>
-								</div>
+								</div> -->
 								<div class="form_down">
 									<div class="acciones">
-										<p>4.2 Mide las acciones de tu Widget</p>
+										<p>3.1 Mide las acciones de tu Widget</p>
 										<div class="checkboxs">
 											<div class="google">
 												<input type="checkbox" id='google_mail' name='acciones' checked>
@@ -499,7 +494,7 @@
 				<form>
 					<div class="border">
 						<div class="tit">
-							<h2>Wiget Facebook</h2>
+							<h2>Facebook Messenger</h2>
 						</div>
 						<div class="formulario">
 							<div class="url">
@@ -507,7 +502,7 @@
 								<input type="text" name="" id='url' placeholder="Ej. www.facebook.com/tuempresa">
 							</div>
 							<div class="dias">
-								<p>3. Define los días y horarios en que se activará  el Widget de Telefono</p>
+								<p>2. Define los días y horarios en que se activará  el Widget de Telefono</p>
 								<div class="days">
 									<div>
 										<input type="radio" id='todos_fb' name='days' class='todos' checked>
@@ -541,15 +536,15 @@
 								</div>
 							</div>
 							<div class="cfg_general">
-								<p class='title'>4. Configuración General</p>
-								<div class="mensaje">
+								<p class='title'>3. Configuración General</p>
+								<!-- <div class="mensaje">
 									<label for="mensaje">4.1 Elige el mensaje de bienvenida</label>
 									<textarea id='mensaje' placeholder="Hola, ¿cómo podemos ayudarte? Envíanos tu mensaje"></textarea>
 									<p>Este mensaje aparecerá a los 5 segundos de el usuario ingrese a alguna de las páginas de tu sitio web.</p>
-								</div>
+								</div> -->
 								<div class="form_down">
 									<div class="acciones">
-										<p>4.2 Mide las acciones de tu Widget</p>
+										<p>3.1 Mide las acciones de tu Widget</p>
 										<div class="checkboxs">
 											<div class="google">
 												<input type="checkbox" id='google_fb' name='acciones' checked>
@@ -597,7 +592,7 @@
 								<input type="text" name="" id='url' placeholder="Ej. www.facebook.com/tuempresa">
 							</div>
 							<div class="dias">
-								<p>3. Define los días y horarios en que se activará  el Widget de Google Maps</p>
+								<p>2. Define los días y horarios en que se activará  el Widget de Google Maps</p>
 								<div class="days">
 									<div>
 										<input type="radio" id='todos_gm' name='days' class='todos' checked>
@@ -631,15 +626,15 @@
 								</div>
 							</div>
 							<div class="cfg_general">
-								<p class='title'>4. Configuración General</p>
-								<div class="mensaje">
-									<label for="mensaje_gm">4.1 Elige el mensaje de bienvenida</label>
+								<p class='title'>3.1 Configuración General</p>
+								<!-- <div class="mensaje">
+									<label for="mensaje_gm">3.1 Elige el mensaje de bienvenida</label>
 									<textarea id='mensaje_gm' placeholder="Hola, ¿cómo podemos ayudarte? Envíanos tu mensaje"></textarea>
 									<p>Este mensaje aparecerá a los 5 segundos de el usuario ingrese a alguna de las páginas de tu sitio web.</p>
-								</div>
+								</div> -->
 								<div class="form_down">
 									<div class="acciones">
-										<p>4.2 Mide las acciones de tu Widget</p>
+										<p>3.2 Mide las acciones de tu Widget</p>
 										<div class="checkboxs">
 											<div class="google">
 												<input type="checkbox" id='google_gm' name='acciones' checked>
