--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
 							<div class="numero">
 								<label for="numero">1. Agrega tus números de Whatsapp</label>
 								<input type="text" id='numero'>
-								<!-- <a href="">Añadir</a> -->
+								<!-- -->
 							</div>
 							<div class="dias">
 								<p>2. Define los días y horarios en que se activará  el Widget de Whatsapp</p>
 								<div class="days">
 									<div>
-										<input type="radio" id='todos' name='days' class='todos' checked>
+										<input type="radio" id='todos' name='days_wsp' class='todos' checked>
 										<label for="todos">Todos los días y horarios</label>
 									</div>
 									<div>
-										<input type="radio" id='definir' name='days' class='definir'>
+										<input type="radio" id='definir' name='days_wsp' class='definir'>
 										<label for="definir">Definir días y horarios</label>
-									</div>
+									</div> 
 								</div>
 								<div class="fecha">
 									<div class="date">
@@ -323,6 +323,7 @@
 											</select>
 										</div>
 									</div>
+									<a href="" class='add'>Añadir</a>
 								</div>
 							</div>
 							<div class="cfg_general">
@@ -681,6 +682,7 @@
 											</select>
 										</div>
 									</div>
+									<a href="" class='add'>Añadir</a>
 								</div>
 							</div>
 							<div class="cfg_general">
@@ -980,6 +982,7 @@
 											</select>
 										</div>
 									</div>
+									<a href="" class='add'>Añadir</a>
 								</div>
 							</div>
 							<div class="cfg_general">
@@ -1279,6 +1282,7 @@
 											</select>
 										</div>
 									</div>
+									<a href="" class='add'>Añadir</a>
 								</div>
 							</div>
 							<div class="cfg_general">
@@ -1578,6 +1582,7 @@
 											</select>
 										</div>
 									</div>
+									<a href="" class='add'>Añadir</a>
 								</div>
 							</div>
 							<div class="cfg_general">
@@ -1629,6 +1634,7 @@
 	</div>
 	
 	<script type="text/javascript" src='js/jquery-3.1.1.min.js'></script>
+	<script type="text/javascript" src='js/content.js'></script>
 	<script type="text/javascript" src='js/app.js'></script>
 	<script type="text/javascript" src='js/efects.js'></script>
 </body>
